--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,11 @@
 <div>NAV-BAR</div>
 
 <h3>{{name}}</h3>
+<button (click)="start()">
+start
+
+</button>
+<button (click)="stop()">
+stop
+
+</button>
