5 files modified, 3 added, 3 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,5 @@
 <button (click)="send(name)">Click</button> <input type="" [(ngModel)]="name">
 <div>
 
-	<app-nav-bar></app-nav-bar>
-	<app-patient></app-patient>
+  <app-child *ngFor="let t of list" [type]="t"></app-child>
 </div>
